[package]
name = "monkey"
version = "1.0.0"
edition = "2024"

[dependencies]
unicode-ident = "1.0.24"
rustyline = "17.0.2"
thiserror = "2.0.18"
ariadne = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }
nom = "8.0.0"
nom_locate = "5.0.0"
nom-tracable = { git = "https://github.com/justdeeevin/nom-tracable", branch = "nom-8" }
strum = { version = "0.28.0", features = ["derive"] }

[features]
trace = ["nom-tracable/trace"]
