[package]
name = "monkey"
version = "1.0.0"
edition = "2024"

[dependencies]
unicode-ident = "1.0.24"
rustyline = "18.0.0"
thiserror = "2.0.18"
ariadne = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
chumsky = { version = "0.12.0", features = ["pratt"] }

[features]
debug = ["chumsky/debug"]
